# MkStudio

./: .gitignore  CMakeLists.txt  mk.pri  mk.pro  mk.qbs  readme.txt  to_unix
doc/: mkstudio.txt  mmpm_bin_file_map.graphml  modbus-mikkon.doc
server_apps/mkview/: get_modules.py
server_apps/mkview/modules/: ai020.xml  pc020.xml  tc100-access.xml
server_apps/mmpm/: get.py
set/: nsis.bat
src/: mklib.pri  modbuslib.pri  qwt.pri  reqmake.bat  src.pro
src/baseedit/: CMakeLists.txt  baseedit.qbs  baseedit.qrc  icon.rc  info.h  main.cpp  main.h  mainwindow.cpp  mainwindow.h  model.cpp  model.h
src/baseedit/ui/: mainwindow.ui
src/mklib/: CMakeLists.txt  console.cpp  console.h  consolewidget.cpp  consolewidget.h  crc.cpp  crc.h  helpwidget.cpp  helpwidget.h  hires_sleep.cpp  hires_sleep.h  mbconfigwidget.cpp  mbconfigwidget.h  mbmaster.cpp  mbmaster.h  mbmaster_p.h  mbmasterwidget.cpp  mbmasterwidget.h  mbmasterxml.cpp  mbmasterxml.h  mbmasterxml_p.h  mbtypes.h  mk_global.h  mklib.cbp  mklib.pro  mklib.qbs  mklib.qrc  mkpicker.cpp  mkpicker.h  mkselfrecorder.cpp  mkselfrecorder.h  mktable.cpp  mktable.h  mktable_p.h  pch.h  plot.cpp  plot.h  scaledraw.h  serialport.cpp  serialport.h  (+8 more)
src/mklib/doc/: Doxyfile
src/mklib/res/: toolbuttons.qss
src/mklib/ui/: consolewidget.ui  helpwidget.ui  mbconfigwidget.ui  mbmasterwidget.ui  mbmslotexportdialog.ui  mbmslotwidget.ui  plot.ui  plotisrdialog.ui  serialportdialog.ui  slotdialog.ui  slotwidget.ui
src/mkquery/: CMakeLists.txt  mkquery.cbp  mkquery.cpp  mkquery.pro  mkquery.qbs
src/mkserver/: CMakeLists.txt  icon.rc  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mkserver.cbp  mkserver.pro  mkserver.qbs  mkserver.qrc  server.cpp  server.h
src/mkserver/ui/: mainwindow.ui
src/mkserverd/: CMakeLists.txt  mkserverd  mkserverd.cbp  mkserverd.cpp  mkserverd.pro  mkserverd.qbs
src/mkstudio/: CMakeLists.txt  dialogs.cpp  dialogs.h  icon.rc  info.h  main.cpp  main.h  mainwindow.cpp  mainwindow.h  misc.cpp  misc.h  mkstudio.cbp  mkstudio.pro  mkstudio.qbs  mkstudio.qrc  utils.h
src/mkstudio/help/: help.css  index.html  mainwindow.html  project_run.html  project_set.html  system.html
src/mkstudio/ui/: assigndialog.ui  helpwidget.ui  initdialog.ui  mainwindow.ui  settingsdialog.ui  shortcuts.ui  texteditdialog.ui  unitedslots.ui
src/mksync/: CMakeLists.txt  mksync.cbp  mksync.cpp  mksync.pro  mksync.qbs
src/mkview/: CMakeLists.txt  icon.rc  interface.h  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mkview.cbp  mkview.pro  mkview.qbs  mkview.qrc
src/mkview/ui/: initdialog.ui  mainwindowxml.ui  midialog.ui  settings.ui
src/mkview_ai100/: mkview_ai100.pro  plugin.cbp  plugin.h  plugin_ai100.cpp
src/mkview_ai100/ui/: mainwindow.ui  modulewidget.ui
src/mkview_ai400/: mkview_ai400.pro  plugin.cbp  plugin.h  plugin_tb.cpp  speedo_meter.cpp
src/mkview_ai400/help/: index.html
src/mkview_ai400/ui/: mainwindow.ui
src/mkview_di102/: mkview_di102.pro  plugin.cbp  plugin.h  plugin_di102.cpp
src/mkview_di102/ui/: mainwindow.ui
src/mkview_dio100/: mkview_dio100.pro  plugin.cbp  plugin.h  plugin_dio100.cpp
src/mkview_dio100/ui/: mainwindow.ui
src/mkview_joy_demo/: mkview_joy_demo.pro  plugin.h  plugin.qrc  plugin_tb.cpp  speedo_meter.cpp  speedo_meter.h
src/mkview_joy_demo/ui/: mainwindow.ui
src/mkview_mai100/: mkview_mai100.pro  plugin.cbp  plugin.h  plugin_mai100.cpp
src/mkview_mai100/ui/: mainwindow.ui
src/mkview_mai103/: mkview_mai103.pro  plugin.cbp  plugin.h  plugin_mai103.cpp
src/mkview_mai103/ui/: mainwindow.ui
src/mkview_mb100/: mkview_mb100.pro  plugin.cbp  plugin.h  plugin.qrc  plugin_mb100.cpp
src/mkview_mb100/html/: index.html
src/mkview_mb100/res/: conf.xml
src/mkview_mb100/ui/: mainwindow.ui
src/mkview_mb1730/: mkview_mb1730.pro  plugin.cbp  plugin.h  plugin_mb1730.cpp
src/mkview_mb1730/ui/: mainwindow.ui
src/mkview_nodetest/: mkview_nodetest.pro  plugin.cbp  plugin.h  plugin_nodetest.cpp
src/mkview_tb/: mkview_tb.pro  plugin.cbp  plugin.h  plugin_tb.cpp
src/mkview_tb/ui/: mainwindow.ui
src/mmpm/: CMakeLists.txt  bin2mmpm.py  ihex2mmpm.py  main.cpp  main.h  mainwindow.cpp  mainwindow.h  misc.cpp  misc.h  mmpm.qbs  mmpm.qrc  mmpm.rc  mmpm_types.h  modbus.cpp  modbus.h  thread.cpp  thread.h
src/mmpm/help/: help.html
src/mmpm/nsis/: mmpm.nsi
src/mmpm/ui/: downloaddialog.ui  helpdialog.ui  initdialog.ui  mainwindow.ui  optdialog.ui  selectsourcedialog.ui
src/modbuslib/: CMakeLists.txt  abstractmbserver.h  abstractserialport.h  console.cpp  console.h  crc.cpp  crc.h  global_exit_manager.h  mbcommon.cpp  mbcommon.h  mbl_global.h  mbmaster.cpp  mbmaster.h  mbmaster_p.h  mbtcp.cpp  mbtcp.h  mbtcpserver.cpp  mbtcpserver.h  mbtypes.h  mbudp.cpp  mbudp.h  mbudpserver.cpp  mbudpserver.h  modbuslib.cbp  modbuslib.h  modbuslib.pro  modbuslib.qbs  packed_struct_begin.h  packed_struct_end.h  pch.h  serialport.cpp  serialport.h  serialport_p.h  serialport_unix.cpp  serialport_win.cpp  utils.cpp  utils.h  xfiles.cpp  xfiles.h
src/modbuslib/doc/: .gitignore  Doxyfile
src/nsis/: .gitignore  build_nsis_example.bat  gpl_license.txt  mkstudio-up.bat  mkstudio-up.nsi  mkstudio.bat  mkstudio.nsi  mkview.bat  mkview.nsi
src/ssl/: main.cpp  main.h  mainwindow.cpp  mainwindow.h  mkserver.cbp  mkserver.pro  server.cpp  server.h
src/ssl/ui/: mainwindow.ui
src/xsync/: xsync.cbp  xsync.pro
xml/: ai100_01_01.xml  ai300.xml  ai400.xml  ci302.xml  di304.xml  di307.xml  du100_01_01.xml  mb100.xml  pc100.xml  pwm300.xml  tc100.xml  tr400.xml  tr403.xml
